--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page Meuble</title>
-  <link href="./styles.css" rel="stylesheet">
+  <link href="../dist/output.css" rel="stylesheet">
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 <body>
 
   <!-- Navbar -->
-  
 
-  <div id="footer"></div>
+  <div id="app"> 
+    
+  </div>
+  <div id="footer">
+    
+  </div>
 
   <script src="./js/main.js"></script>
 </body>
