--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -13,57 +13,15 @@
       Explore Our Gallery of Inspiring Designs
     </h4>
   </div>
-  <div class="gallery flex justify-center px-[10%]">
-    <div class="grid grid-cols-4 grid-rows-2 grid-flow-col gap-4">
-      <div class="col-span-1">
-        <img
-          src="../src/assets/img-gallery1.svg"
-          class="w-[100%] h-[100%]"
-          alt=""
-          srcset=""
-        />
-      </div>
-      <div class="col-span-2">
-        <img
-          class="w-[100%] h-[100%]"
-          src="../src/assets/img-gallery4.svg"
-          alt=""
-          srcset=""
-        />
-      </div>
-      <div class="col-span-1">
-        <img
-          class="w-[100%] h-[100%]"
-          src="../src/assets/img-gallery2.svg"
-          alt=""
-          srcset=""
-        />
-      </div>
+  <div class="gallery flex justify-center">
+    <div class="grid grid-cols-7 flex-col gap-4">
+      <div class="col-span-2 bg-gallery1 bg-cover w-[330px] h-[330px]"></div>
+      <div class="col-span-2 bg-gallery2 bg-cover w-[330px] h-[330px]"></div>
+      <div class="col-span-3 bg-gallery3 bg-cover w-auto h-[330px]"></div>
+      <div class="col-span-3 bg-gallery4 bg-cover w-auto h-[330px]"></div>
 
-      <div class="col-span-2">
-        <img
-          class="w-[100%] h-[100%]"
-          src="../src/assets/img-gallery3.svg"
-          alt=""
-          srcset=""
-        />
-      </div>
-      <div class="col-span-1">
-        <img
-          class="w-[100%] h-[100%]"
-          src="../src/assets/img-gallery5.svg"
-          alt=""
-          srcset=""
-        />
-      </div>
-      <div class="col-span-1">
-        <img
-          class="w-[100%] h-[100%]"
-          src="../src/assets/img-gallery6.svg"
-          alt=""
-          srcset=""
-        />
-      </div>
+      <div class="col-span-2 bg-gallery5 bg-cover w-[330px] h-[330px]"></div>
+      <div class="col-span-2 bg-gallery6 bg-cover w-[330px] h-[330px]"></div>
     </div>
   </div>
 </section>
