--- a/src/index.html
+++ b/src/index.html
@@ -139,23 +139,23 @@
         </div>
       </header>
 
-      <div id="home"></div>
+      <section id="home"></section>
 
-      <div id="saleproducts"></div>
+      <section id="saleproducts"></section>
 
-      <div id="products"></div>
+      <section id="products"></section>
 
-      <div id="elevate"></div>
+      <section id="elevate"></section>
 
-      <div id="someproducts"></div>
+      <section id="someproducts"></section>
 
-      <div id="elevate2"></div>
+      <section id="elevate2"></section>
 
-      <div id="dedicate"></div>
+      <section id="dedicate"></section>
 
-      <div id="gallery"></div>
+      <section id="gallery"></section>
     </div>
-    <div id="footer"></div>
+    <section id="footer"></section>
 
     <script src="./js/main.js"></script>
   </body>
