--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <div class="swiper-slide  bg-gray-100 rounded-lg shadow-md p-6 flex items-center">
           <div class="flex justify-between">
             <img src="/src/assets/meuble1.png" alt="Sofa" class="w-1/2 object-cover rounded-lg shadow-sm pr-8" />
-            <div class="pl-4 flex-1"> <!-- Ajout de flex-1 pour remplir l'espace restant -->
+            <div class="pl-4 flex-1"> 
               <h3 class="text-lg font-bold">Sofa</h3>
               <button class="mt-2 bg-white text-black font-medium py-2 px-4 rounded-full shadow-md hover:bg-gray-200">See More</button>
             </div>
@@ -41,7 +41,7 @@
         <div class="swiper-slide  bg-gray-100 rounded-lg shadow-md p-6 flex items-center">
           <div class="flex justify-between">
             <img src="/src/assets/meuble1.png" alt="Sofa" class="w-1/2 object-cover rounded-lg shadow-sm pr-8" />
-            <div class="pl-4 flex-1"> <!-- Ajout de flex-1 pour remplir l'espace restant -->
+            <div class="pl-4 flex-1"> 
               <h3 class="text-lg font-bold">Sofa</h3>
               <button class="mt-2 bg-white text-black font-medium py-2 px-4 rounded-full shadow-md hover:bg-gray-200">See More</button>
             </div>
@@ -51,7 +51,7 @@
         <div class="swiper-slide  bg-gray-100 rounded-lg shadow-md p-6 flex items-center">
           <div class="flex justify-between">
             <img src="/src/assets/meuble2.png" alt="Sofa" class="w-1/2 object-cover rounded-lg shadow-sm pr-8" />
-            <div class="pl-4 flex-1"> <!-- Ajout de flex-1 pour remplir l'espace restant -->
+            <div class="pl-4 flex-1">
               <h3 class="text-lg font-bold">Sofa</h3>
               <button class="mt-2 bg-white text-black font-medium py-2 px-4 rounded-full shadow-md hover:bg-gray-200">See More</button>
             </div>
@@ -60,7 +60,7 @@
         <div class="swiper-slide  bg-gray-100 rounded-lg shadow-md p-6 flex items-center">
           <div class="flex justify-between">
             <img src="/src/assets/meuble3.png" alt="Sofa" class="w-1/2 object-cover rounded-lg shadow-sm pr-8" />
-            <div class="pl-4 flex-1"> <!-- Ajout de flex-1 pour remplir l'espace restant -->
+            <div class="pl-4 flex-1"> 
               <h3 class="text-lg font-bold">Sofa</h3>
               <button class="mt-2 bg-white text-black font-medium py-2 px-4 rounded-full shadow-md hover:bg-gray-200">See More</button>
             </div>
