--- a/pages/ElevateSpace.html
+++ b/pages/ElevateSpace.html
@@ -1,5 +1,5 @@
 <section class="py-6 relative bg-white"> 
-    <div class="mx-auto flex flex-col md:flex-row items-center justify-between">
+    <div class="mx-auto flex flex-col-reverse md:flex-row items-center justify-between">
         <div class="w-full md:w-1/2 p-4 md:p-8">
             <h2 class="text-2xl md:text-3xl font-bold mb-4">Elevate Your Space with Uncompromising Quality</h2>
             <p class="text-gray-600 mb-6">Experience the epitome of furniture quality. Our products are meticulously crafted with an unwavering commitment to excellence. From the finest materials to expert craftsmanship, each piece embodies durability, comfort, and timeless style. Elevate your space with the assurance of exceptional quality and lasting beauty.</p>
