--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
     <div class="text md:w-[45%] md:mt-4 md:mr-10">
       <div class="slog">
         <h1
-          class="md:text-7xl text-6xl md:text-left text-center font-bold text-[#333333]"
+          class="md:text-7xl text-5xl md:text-left text-center font-bold text-[#333333]"
         >
           Perfect
           <span class="block">Harmony:</span>
@@ -16,7 +16,9 @@
           elevate your home
         </p>
       </div>
-      <div class="buttons flex gap-x-2 items-center">
+      <div
+        class="buttons flex gap-x-2 md:justify-start justify-center items-center"
+      >
         <a
           href="#"
           class="px-4 py-2 text-sm font-extralight border-[1px] border-gray-900 rounded-3xl"
@@ -51,7 +53,9 @@
     </div>
   </div>
   <div class="bottom-bar w-full flex justify-center">
-    <ul class="bottom-bar-items flex gap-x-20 text-[#999999] text-2xl">
+    <ul
+      class="bottom-bar-items flex lg:gap-x-20 gap-x-2 text-[#999999] sm:text-2xl text-md"
+    >
       <li class="font-bold">Lowe’s</li>
       <li class="font-normal">DeWalt</li>
       <li class="font-normal">Home Depot</li>
