--- a/pages/products.html
+++ b/pages/products.html
@@ -1,5 +1,5 @@
 <section id="products">
-  <div class="products px-[10%] my-24">
+  <div class="products px-[10%]">
     <div class="button">
       <button
         type="button"
@@ -42,7 +42,7 @@
       </div>
       <div class="products-grid">
         <div
-          class="grid md:grid-cols-4 sm:grid-cols-2 grid-cols-1 items-center gap-4"
+          class="grid md:grid-cols-4 sm:grid-cols-2 items-center gap-4"
         >
           <div class="">
             <div class="img">
