--- a/pages/Testimonials.html
+++ b/pages/Testimonials.html
@@ -34,7 +34,7 @@
      
     </div>
 
-    <div class="relative text-black h-80 overflow-hidden flex justify-center ">
+    <div class="relative text-black h-[380px] md:h-[400px] lg:h-[600px] overflow-hidden flex justify-center ">
       <div id="testimonial-container" class="space-y-6 absolute top-0  w-4/5 md:w-1/2">
 
         <div class="testimonial bg-white text-gray-900 p-6 rounded-lg shadow-lg">
