--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM6T5zOp8zGzP5C6oheSYBef9T8mN4Jh3NgtES" crossorigin="anonymous" />
   
-  <link rel="stylesheet" href="swiper-bundle.min.css" />
+  <link rel="stylesheet" href="swiper-bundle.min.css" /> 
+
+  <link rel="stylesheet" href="../src/assets/all.min.css" />
+
+
   
 
 </head> 
@@ -19,7 +23,151 @@
   background: #fd761c; 
 }
   </style>
-<!-- Boutons de catégorie -->
+
+
+<!--Navbar-->
+<div id="app">
+      
+  <header class="header px-8 md:px-24 py-4">
+    <div class="top-bar sm:block hidden border-b-[1px] pb-2 border-gray-700">
+      <div class="flex justify-between">
+        <div class="infos flex">
+          <ul class="flex gap-x-4">
+            <li class="flex gap-x-2">
+              <span class="w-4 text-oran"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+                  ></path>
+                </svg>
+              </span>
+              <p class="text-thin ">+xx xxx xxx x</p>
+            </li>
+            <li class="flex gap-x-2">
+              <span class="w-4 text-oran"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+                  ></path>
+                  <polyline points="22,6 12,13 2,6"></polyline>
+                </svg>
+              </span>
+              <p class="text-thin">+xx xxx xxx x</p>
+            </li>
+          </ul>
+        </div>
+        <div class="socials">
+          <ul class="social-list flex gap-x-7">
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="#000"
+              >
+                <path
+                  d="M16.98 0a6.9 6.9 0 0 1 5.08 1.98A6.94 6.94 0 0 1 24 7.02v9.96c0 2.08-.68 3.87-1.98 5.13A7.14 7.14 0 0 1 16.94 24H7.06a7.06 7.06 0 0 1-5.03-1.89A6.96 6.96 0 0 1 0 16.94V7.02C0 2.8 2.8 0 7.02 0h9.96zm.05 2.23H7.06c-1.45 0-2.7.43-3.53 1.25a4.82 4.82 0 0 0-1.3 3.54v9.92c0 1.5.43 2.7 1.3 3.58a5 5 0 0 0 3.53 1.25h9.88a5 5 0 0 0 3.53-1.25 4.73 4.73 0 0 0 1.4-3.54V7.02a5 5 0 0 0-1.3-3.49 4.82 4.82 0 0 0-3.54-1.3zM12 5.76c3.39 0 6.2 2.8 6.2 6.2a6.2 6.2 0 0 1-12.4 0 6.2 6.2 0 0 1 6.2-6.2zm0 2.22a3.99 3.99 0 0 0-3.97 3.97A3.99 3.99 0 0 0 12 15.92a3.99 3.99 0 0 0 3.97-3.97A3.99 3.99 0 0 0 12 7.98zm6.44-3.77a1.4 1.4 0 1 1 0 2.8 1.4 1.4 0 0 1 0-2.8z"
+                />
+              </svg>
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="#000"
+              >
+                <path
+                  d="M22.5 0c.83 0 1.5.67 1.5 1.5v21c0 .83-.67 1.5-1.5 1.5h-6v-9h3l.75-3.75H16.5v-1.5c0-1.5.75-2.25 2.25-2.25h1.5V3.75h-3c-2.76 0-4.5 2.16-4.5 5.25v2.25h-3V15h3v9H1.5A1.5 1.5 0 0 1 0 22.5v-21C0 .67.67 0 1.5 0h21z"
+                />
+              </svg>
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="#000"
+              >
+                <path
+                  d="M24 4.37a9.6 9.6 0 0 1-2.83.8 5.04 5.04 0 0 0 2.17-2.8c-.95.58-2 1-3.13 1.22A4.86 4.86 0 0 0 16.61 2a4.99 4.99 0 0 0-4.79 6.2A13.87 13.87 0 0 1 1.67 2.92 5.12 5.12 0 0 0 3.2 9.67a4.82 4.82 0 0 1-2.23-.64v.07c0 2.44 1.7 4.48 3.95 4.95a4.84 4.84 0 0 1-2.22.08c.63 2.01 2.45 3.47 4.6 3.51A9.72 9.72 0 0 1 0 19.74 13.68 13.68 0 0 0 7.55 22c9.06 0 14-7.7 14-14.37v-.65c.96-.71 1.79-1.6 2.45-2.61z"
+                />
+              </svg>
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="#000"
+              >
+                <path
+                  d="M22.23 0H1.77C.8 0 0 .77 0 1.72v20.56C0 23.23.8 24 1.77 24h20.46c.98 0 1.77-.77 1.77-1.72V1.72C24 .77 23.2 0 22.23 0zM7.27 20.1H3.65V9.24h3.62V20.1zM5.47 7.76h-.03c-1.22 0-2-.83-2-1.87 0-1.06.8-1.87 2.05-1.87 1.24 0 2 .8 2.02 1.87 0 1.04-.78 1.87-2.05 1.87zM20.34 20.1h-3.63v-5.8c0-1.45-.52-2.45-1.83-2.45-1 0-1.6.67-1.87 1.32-.1.23-.11.55-.11.88v6.05H9.28s.05-9.82 0-10.84h3.63v1.54a3.6 3.6 0 0 1 3.26-1.8c2.39 0 4.18 1.56 4.18 4.89v6.21z"
+                />
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="flex justify-between items-center my-2">
+      <div class="logo">
+        <h1 class="text-2xl md:text-xl lg:text-3xl font-bold">FOURNITURE</h1>
+      </div>
+      <div class="menu-list list-none md:flex hidden sm:text-base text-sm gap-x-4 font-thin">
+        <li class="font-medium  text-lg lg:text-xl xl:text-2xl">Home</li>
+        <li class="font-medium  text-lg lg:text-xl xl:text-2xl">About</li>
+        <li class="font-medium text-lg lg:text-xl xl:text-2xl">Fourniture</li>
+        <li class="font-medium text-lg lg:text-xl xl:text-2xl">Car Catalogue</li>
+        <li class="font-medium  text-lg lg:text-xl xl:text-2xl">FAQ</li>
+      </div>
+      <!-- <div class="butons md:flex hidden text-sm items-center gap-x-2">
+        <a href="#" class="text-oran">Sign in</a>
+        <a href="#" class="px-4 py-2 bg-oran text-white rounded-3xl"
+          >Sign up</a
+        >
+      </div> -->
+        <div class='md:hidden flex z-20 justify-end text-terre'>
+            <svg class='' onClick="updateMenu" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <line class='line1' x1="3" y1="12" x2="21" y2="12"></line>
+            <line class='line2' x1="3" y1="6" x2="21" y2="6"></line>
+            <line class='line3' x1="3" y1="18" x2="21" y2="18"></line>
+            </svg>
+        </div>
+      
+    </div>
+  </header>
+    </div>
+
+<!--Fin Navbar-->
+
+
+
+<!-- Boutons de catégorie
 <div class="flex flex-wrap space-y-2  space-x-4 mt-4 md:mt-0">
   <button id="best-seller-btn" class="category-btn px-6 py-2 bg-gray-200 text-black rounded-md hover:bg-black hover:text-white transition">
     Best Seller
@@ -39,8 +187,8 @@
 </div> 
 
 <div class="grid">
-  <!-- Les produits s'afficheront ici -->
-</div>
+
+</div> 
 
   <script>
     // Sélectionne la section des produits
@@ -112,7 +260,7 @@ document.getElementById('closet-btn').addEventListener('click', () => displayPro
 // Par défaut, afficher la catégorie "Best Seller"
 displayProducts('bestSeller');
 
-  </script>
+  </script> --> 
 
  <div id="heroSection"></div>
 
@@ -120,7 +268,7 @@ displayProducts('bestSeller');
 </div>
 
 <section class="py-10  relative">                         
-  <div class="mx-4 mdmx-16">
+  <div class="px-6 md:px-16 lg:px-32">
    
     <div class="swiper-container overflow-hidden">
       <div class="swiper-wrapper">
@@ -183,7 +331,7 @@ displayProducts('bestSeller');
 </div>
 
 <section class="py-10  relative">                         
-  <div class="mx-4 mdmx-16">
+  <div class="px-6 md:px-16 lg:px-32">
    
     <div class="swiper-container overflow-hidden">
       <div class="swiper-wrapper">
