--- a/pages/GalleryAll.html
+++ b/pages/GalleryAll.html
@@ -14,8 +14,8 @@
         <h2 class=" text-2xl md:text-3xl font-semibold">Crafted with excellent material</h2>
       </div>
       <!-- Boutons de catégorie -->
-      <div class="flex flex-wrap space-y-2  space-x-4 mt-4 md:mt-0">
-        <button id="best-seller-btn" class="category-btn px-6 py-2 bg-gray-200 text-black rounded-md hover:bg-black hover:text-white transition">
+      <div class="flex flex-wrap gap-4 mt-4 md:mt-0">
+        <button id="best-seller-btn" class="category-btn px-6 py-2 rounded-md bg-black text-white transition">
           Best Seller
         </button>
         <button id="chair-btn" class="category-btn px-6 py-2 bg-gray-200 text-black rounded-md hover:bg-black hover:text-white transition">
@@ -30,7 +30,8 @@
         <button id="closet-btn" class="category-btn px-6 py-2 bg-gray-200 text-black rounded-md hover:bg-black hover:text-white transition">
           Closet
         </button>
-      </div> 
+      </div>
+      
 
     </div>
   
@@ -41,3 +42,46 @@
     
   </div>
   
+  <script>
+    // Fonction pour changer l'état actif
+function setActiveButton(buttonId) {
+  // Récupérer tous les boutons de catégorie
+  const buttons = document.querySelectorAll('.category-btn');
+
+  // Boucle sur chaque bouton et supprimer la classe "active"
+  buttons.forEach(button => {
+    button.classList.remove('bg-black', 'text-white');
+    button.classList.add('bg-gray-200', 'text-black');
+  });
+
+  // Ajouter les classes "active" au bouton cliqué
+  const activeButton = document.getElementById(buttonId);
+  activeButton.classList.remove('bg-gray-200', 'text-black');
+  activeButton.classList.add('bg-black', 'text-white');
+}
+
+// Ajouter des événements de clic sur chaque bouton
+document.getElementById('best-seller-btn').addEventListener('click', () => {
+  setActiveButton('best-seller-btn');
+});
+
+document.getElementById('chair-btn').addEventListener('click', () => {
+  setActiveButton('chair-btn');
+});
+
+document.getElementById('table-btn').addEventListener('click', () => {
+  setActiveButton('table-btn');
+});
+
+document.getElementById('bed-btn').addEventListener('click', () => {
+  setActiveButton('bed-btn');
+});
+
+document.getElementById('closet-btn').addEventListener('click', () => {
+  setActiveButton('closet-btn');
+});
+
+// Activer le bouton "Best Seller" par défaut
+setActiveButton('best-seller-btn');
+
+  </script>
