--- a/pages/HeroSection.html
+++ b/pages/HeroSection.html
@@ -1,15 +1,15 @@
-<section class="bg-white py-12 px-1 md:px-16 lg:px-32">
+<section class="bg-white py-12 px-1 md:px-8 lg:px-28">
     <div class=" mx-auto flex flex-col md:flex-row items-center justify-between px-6">
      
       <div class="md:w-1/2 pr-8 xl:pr-16">
-        <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold leading-tight mb-4 ">
+        <h1 class="text-3xl md:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl font-bold leading-tight mb-4 " style="line-height: 1.3;">
           Perfect Harmony: <br> Comfort & Style
         </h1>
-        <p class="text-gray-600 text-lg md:text-xl mb-6 lg:text-xl xl:text-2xl ">
+        <p class="text-gray-600 text-md md:text-lg mb-6 lg:text-xl xl:text-2xl 2xl:text-3xl" style="line-height: 1.5;">
           Explore furniture that harmoniously combines comfort and style to elevate your home.
         </p>
         <div class="flex items-center space-x-2 md:space-x-4 ">
-          <a href="#" class="text-gray-800 border-2 border-gray-800 px-2 py-2 md:px-6 md:py-3 rounded-full hover:bg-gray-100 text-sm md:text-lg lg:text-xl xl:text-2xl">
+          <a href="#" class="text-gray-800 border-2 border-gray-800 px-2 py-2 md:px-6 md:py-3 rounded-full hover:bg-gray-100 text-sm md:text-md lg:text-md xl:text-xl 2xl:text-3xl">
             Explore Our Offers 
           </a>
           <button class="flex items-center space-x-2 text-gray-800">
@@ -20,14 +20,14 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12c0 4.971-4.029 9-9 9s-9-4.029-9-9 4.029-9 9-9 9 4.029 9 9z" />
               </svg>
             </span>
-            <span class="text-lg lg:text-xl xl:text-2xl ">Watch Video</span>
+            <span class="text-md lg:text-lg xl:text-xl 2xl:text-3xl">Watch Video</span>
           </button>
         </div>
       </div>
-  
+   
       <!-- Image Section -->
       <div class="mt-8 md:mt-0 md:w-1/2 flex xl:justify-end">
-        <img class="w-fullshadow-lg" src="/src/assets/image_hero_section.png" alt="Furniture Image">
+        <img class=" sm:w-4/5 lg:w-full shadow-lg" src="/src/assets/image_hero_section.png" alt="Furniture Image">
       </div>
     </div>
   </section> 
