--- a/pages/HeroSection.html
+++ b/pages/HeroSection.html
@@ -1,4 +1,4 @@
-<section class="bg-white py-12 px-1 md:px-8 lg:px-28">
+<section class="bg-white py-6 md:py-12 px-1 md:px-8 lg:px-28">
     <div class=" mx-auto flex flex-col md:flex-row items-center justify-between px-6">
      
       <div class="md:w-1/2 pr-8 xl:pr-16">
@@ -19,7 +19,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-5.197-2.597a1 1 0 00-1.505.866v5.124a1 1 0 001.505.866l5.197-2.598a1 1 0 000-1.732z" />
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12c0 4.971-4.029 9-9 9s-9-4.029-9-9 4.029-9 9-9 9 4.029 9 9z" />
               </svg>
-            </span>
+            </span> 
             <span class="text-md lg:text-lg xl:text-xl 2xl:text-3xl">Watch Video</span>
           </button>
         </div>
