--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
     <!-- Mobile Menu (Hidden by default) -->
     <nav id="mobile-menu" class="hidden md:hidden">
       <ul class="list-none text-center">
-        <li><a href="/" class="block py-2 text-lg navbar-link">Accueil</a></li>
+        <li><a href="#app" class="block py-2 text-lg navbar-link">Accueil</a></li>
         <li><a href="#vente" class="block py-2 text-lg navbar-link">En vente</a></li>
         <li><a href="#GalleryAll" class="block py-2 text-lg navbar-link">Catologue</a></li>
         <li><a href="#testimonials" class="block py-2 text-lg navbar-link">Témoignage</a></li>
